
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.3-pl
====================================
- Fixed security issue with login screen and resource TV controller that allowed html injection
- Fixed issue where clear cache checkbox isn't checked on Element pages
- [#MODX-2370] Fixed various bugs with plugin event association on plugin page
- [#MODX-1823] Improved the System Info panel by extracting data from phpinfo()
- [#MODX-2362] Added missing OnResourceTVFormPrerender event
- [#MODX-2374] Fixed issue where children nodes were not being moved with parent into new context
- [#MODX-2373] Fixed imageTV issue where thumbnail was not cleared on data clearing
- [#MODX-364] Fixed regClient* methods in cacheable Snippets on cacheable Resources
- [#MODX-2370] Fixed issue with saving property sets on plugin events
- [#MODX-2369] Fixed issue with modLinkTag and output filters where the filter commands were included in the URL
- [#MODX-2350] Ensure that new Contexts always have Admin and Resource policy for Admin user group assigned to them
- [#MODX-2352] Ensure that Context Settings appropriately override System Settings in core-level parsing where a Context is existent (example: site_unavailable_page)
- [#MODX-2356] Ensure that OnResourceDelete and OnResourceUndelete events in update processors fire at correct times, after save()
- [#MODX-2361] Ensure that a user in the Administrator group *always* has access to a Context when it is restricted in another user group
- [#MODX-2357] Fixed bug that occurs when hiding a tab with FC rule that is the default active tab
- [#MODX-2358] Fixed rare bug occurring with treestate in Chrome due to undefined variables in path
- Fixed various issues with package management and the add new package button